# Northstar

./: .gitignore  TODO.txt  _cua.py  geolocate.py  package-lock.json  package.json  quickstart.py  visualize.py
cua/: README.md  __main__.py  dashboard.py  runner.py  tasks.py
cua-hack/: annotate.py
cua/static/: app.js  index.html  style.css
drone_management/: .env.example  .gitignore  CLAUDE.md  README.md  RUNPOD_INSTRUCTIONS.txt  pyproject.toml
drone_management/alembic/: env.py
drone_management/alembic/versions/: 0001_init.py
drone_management/app/: command_service.py  config.py  db.py  main.py  mavlink_link.py  models.py  schemas.py  telemetry_bus.py
drone_management/app/routers/: commands.py  cua.py  drones.py  ws.py
drone_management/app/static/: app.js  index.html  style.css
drone_management/cua/: __main__.py  annotate.py  config.py  runner.py  streamer.py  tasks.py
drone_management/docs/: CUA_DEMO.md  MAP_GUIDE.md  SESSION_LOG.md
drone_management/mock_drone/: __main__.py  mav_io.py  sim.py
drone_management/scripts/: restart.sh
drone_management/tests/: conftest.py  test_api.py  test_command_service.py  test_models.py  test_sim_state_machine.py
geolocate_steps/: result.json
