[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_management"
version = "0.1.0"
description = "Bidirectional drone telemetry and management service (v1)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "aiosqlite>=0.19",
  "alembic>=1.13",
  "pymavlink>=2.4.40",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
cua = [
  "tzafon",
  "httpx>=0.27",
  "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["app*", "mock_drone*", "cua*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
